--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,12 +48,16 @@ dependencies {
     compile 'com.jakewharton.timber:timber:4.3.1'
 
     /*************************dagger2 引入***************************/
-    compile 'com.google.dagger:dagger:2.6'
-    annotationProcessor "com.google.dagger:dagger-compiler:2.6"
+    compile 'com.google.dagger:dagger:2.19'
+    annotationProcessor "com.google.dagger:dagger-compiler:2.19"
 
     // android support
-    implementation 'com.google.dagger:dagger-android:2.15'
-    implementation 'com.google.dagger:dagger-android-support:2.15' // 如果使用 support library
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.15'
+//    implementation 'com.google.dagger:dagger-android:2.x'
+//    implementation 'com.google.dagger:dagger-android-support:2.x' // 如果使用 support library
+//    annotationProcessor 'com.google.dagger:dagger-android-processor:2.x'
+
+    compile 'com.google.dagger:dagger-android:2.19'
+    compile 'com.google.dagger:dagger-android-support:2.19' // if you use the support libraries
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.19'
 
 }
